--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,2 +1,11 @@
 main {
   margin-top: 60px; }
+
+#login {
+  background-color: #f7f5f5; }
+
+#login-form {
+  margin-top: 120px; }
+  #login-form h1 {
+    text-align: center;
+    margin-bottom: 40px; }
