--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,16 @@
 main {
   margin-top: 60px;
 }
+
+#login {
+  background-color: #f7f5f5;
+}
+
+#login-form {
+  margin-top: 120px;
+
+  h1 {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+}
